# cc-sf-assistant

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  EXPLORATION_REPORT.md  EXTERNAL_DEPENDENCIES.md  MONOREPO_ARCHITECTURE.md  Q11-Q15-CRITICAL-ANALYSIS.md  QUICK_START.md  README.md  RESTRUCTURE_PLAN.md  plan-meta-skills.md  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  spec.md
.claude/: CLAUDE.md
.claude/agents/: code-reviewer.md
.claude/commands/shared/: sync-docs.md
.claude/hooks/: stop.sh
.claude/prompts/: fix-quality-issues.md
.claude/skills/creating-agents/: SKILL.md
.claude/skills/creating-agents/assets/templates/: AGENT_DOMAIN_SPECIALIST_TEMPLATE.md  AGENT_FULL_ACCESS_IMPLEMENTER_TEMPLATE.md  AGENT_READONLY_RESEARCHER_TEMPLATE.md
.claude/skills/creating-agents/references/agent-guides/: domain-specialist-guide.md  full-access-implementer-guide.md  readonly-researcher-guide.md
.claude/skills/creating-agents/scripts/: generate_agent.py  validate_agent_naming.py  validate_agent_structure.py  validate_agent_tools.py  validate_agent_yaml.py
.claude/skills/creating-commands/: SKILL.md
.claude/skills/creating-commands/assets/templates/: COMMAND_BATCH_PROCESSING_TEMPLATE.md  COMMAND_DATA_TRANSFORMATION_TEMPLATE.md  (+7 more)
.claude/skills/creating-commands/scripts/: generate_command.py  validate_command_naming.py  validate_command_structure.py  validate_command_usage.py  validate_command_yaml.py
.claude/skills/creating-skills/: SKILL.md
.claude/skills/creating-skills/references/: cso-guide.md  rationalization-proofing.md  testing-protocol.md
.claude/skills/creating-skills/scripts/: generate_skill.py  validate_cso.py  validate_naming.py  validate_rationalization.py  validate_structure.py  validate_yaml.py
.claude/skills/enforcing-research-plan-implement-verify/: SKILL.md
.claude/skills/enforcing-research-plan-implement-verify/references/: checkpoint-examples.md  complete-rationalization-table.md
.claude/skills/financial-quality-gate/: SKILL.md
.claude/skills/financial-quality-gate/references/: audit-trail-requirements.md  decimal-precision.md  edge-cases.md  testing-standards.md
.claude/skills/financial-quality-gate/validators/: audit-trail-checker.py  decimal-checker.py  edge-case-tester.py
.claude/skills/financial-validator/: SKILL.md
.claude/skills/financial-validator/references/: edge-cases.md
.claude/skills/financial-validator/scripts/: validate_precision.py
.claude/skills/hierarchical-context-manager/: SKILL.md
.claude/skills/hierarchical-context-manager/references/: cascading-rules.md  maintenance-patterns.md  migration-strategy.md  token-estimation.md
.claude/skills/hierarchical-context-manager/templates/: claude-dir-claude.md.template  root-claude.md.template  scripts-claude.md.template  tests-claude.md.template
.claude/skills/hook-factory/: SKILL.md  TEST_RESULTS.md
.claude/skills/hook-factory/references/: dev-hooks.md  exit-code-contract.md  hook-patterns.md  prod-hooks.md
.claude/skills/hook-factory/templates/: notification.sh  post-tool-use.sh  pre-compact.sh  pre-tool-use.sh  session-start.sh  stop.sh  subagent-stop.sh  user-prompt-submit.sh
.claude/skills/prod/variance-analyzer/: SKILL.md
.claude/skills/system-coherence-validator/: SKILL.md
.claude/skills/system-coherence-validator/references/: continuous-validation.md  error-reporting.md  retroactive-validation.md  validation-rules.md
.claude/skills/system-coherence-validator/validators/: cross-reference-validator.py  cso-scorer.py  integration-validator.py  naming-validator.py  structure-validator.py  yaml-validator.py
.claude/skills/variance-analyzer/: SKILL.md
.claude/skills/variance-analyzer/assets/: README.md
.claude/skills/variance-analyzer/references/: README.md
.claude/skills/variance-analyzer/scripts/: README.md
.claude/templates/: README.md
.claude/templates/agents/: AGENT_TEMPLATE.md
.claude/templates/commands/: COMMAND_TEMPLATE.md
.claude/templates/skills/: SKILL_TEMPLATE.md
.claude/templates/workflows/: RESEARCH_PLAN_IMPLEMENT_VERIFY.md  TDD_WORKFLOW.md
config/: .env.example  account_mapping.yaml  fpa_config.yaml  thresholds.yaml
config/credentials/: README.md
data/samples/: README.md  actuals_dec_2025.xlsx  actuals_nov_2025.xlsx  budget_2025.xlsx
docs/: CLAUDE_CODE_INFRASTRUCTURE_INTEGRATION.md  COMPREHENSIVE_GITHUB_SOURCES.md  DEPENDENCY_FLOW.md  EXTERNAL_INTEGRATION_GUIDE.md  SCOPE_REFINEMENT_2025-11-09.md
scripts/: CLAUDE.md
scripts/hooks/: check_file_length.py  validate_no_floats.py
scripts/utils/: generate_sample_data.py
specs/: META_SKILLS_DESIGN.md  PHASE_VALIDATION_CHECKLIST.md  claude-code-hooks-research.md
specs/adaptive/: ADAPTIVE_API_SPEC.md
specs/claude-cookbooks/: research.md
specs/commands-and-agents/: multi-agent-analysis.md  research.md
specs/creating-commands-and-agents/: plan.md  research-validation-addendum.md  research.md
specs/creating-skills/: checklist.md  plan.md  research.md  verification-report.md
specs/data-analysis-skills/: research.md
specs/databricks/: DATABRICKS_API_SPEC.md
specs/enforcing-research-plan-implement-verify/: checklist.md  plan.md  pressure-scenarios.md  research.md  verification-report.md
specs/google/: GOOGLE_WORKSPACE_SPEC.md
specs/holistic-skills/: agent-orchestration-research.md  checklist.md  dependency-graph.md  plan.md  research.md
specs/holistic-skills-analysis/: analysis.md
specs/holistic-system-management/: research.md
specs/meta-infrastructure/: checklist.md  plan.md  research.md  validation-report.md
specs/meta-skills/: checklist.md  research-summary.md
specs/plans/: meta-skills.md
specs/research/: meta-skills.md
specs/variance-calculation/: plan.md
src/core/: account_mapper.py  consolidation.py  data_validator.py
src/utils/: config_loader.py  file_utils.py  logger.py
tests/: CLAUDE.md
tests/hooks/: test_check_file_length.py  test_validate_no_floats.py
tests/unit/: test_account_mapper.py  test_consolidation.py  test_data_validator.py
tests/utils/: test_generate_sample_data.py
(+5 files in other folders)
