[tool.poetry]
name = "fpa-automation-monorepo"
version = "0.1.0"
description = "FP&A Automation Assistant - Monorepo with external dependencies"
authors = ["FP&A Automation Team"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"

# Workspace packages (our custom code)
fpa-core = { path = "packages/fpa-core", develop = true }
fpa-integrations = { path = "packages/fpa-integrations", develop = true }
fpa-workflows = { path = "packages/fpa-workflows", develop = true }
fpa-cli = { path = "packages/fpa-cli", develop = true }

# Common dependencies
pandas = "^2.1.0"
gspread = "^6.1.2"
gspread-dataframe = "^4.0.0"
openpyxl = "^3.1.2"
xlsxwriter = "^3.1.9"
click = "^8.1.7"
rich = "^13.7.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
tqdm = "^4.66.0"
google-auth = "^2.23.0"
google-auth-oauthlib = "^1.1.0"

# External dependencies from cloned repos (future use)
# Option: Install from local paths when needed
# slidio = { path = "external/slidio", develop = true }
# pyfpa = { path = "external/pyfpa", develop = true }
# py-money = { path = "external/py-money", develop = true }
# humanlayer = { path = "external/humanlayer", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.12.1"
mypy = "^1.7.1"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=packages --cov-report=term-missing"
