[tool.poetry]
name = "fpa-automation-monorepo"
version = "0.2.0"
description = "FP&A Automation Assistant - Monorepo with external dependencies"
authors = ["FP&A Automation Team"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"

# Core dependencies for calculation scripts
pandas = "^2.1.0"
gspread = "^6.1.2"
gspread-dataframe = "^4.0.0"
openpyxl = "^3.1.2"
xlsxwriter = "^3.1.9"
click = "^8.1.7"
rich = "^13.7.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
tqdm = "^4.66.0"

# Google Workspace APIs
google-auth = "^2.23.0"
google-auth-oauthlib = "^1.1.0"
google-api-python-client = "^2.100.0"

# Precision & Currency (Phase 1 - Shared Foundation)
stockholm = "^0.3.0"

# Data Validation (Phase 1-2)
pydantic = "^2.0.0"
pandera = "^0.17.0"
typeguard = "^4.0.0"

# API Integration (Phase 2)
tenacity = "^8.2.0"

# Reporting & Tables (Phase 4)
great-tables = "^0.2.0"

# Financial Calculations (Phase 6)
pyxirr = "^0.10.0"

# Reconciliation (Phase 3)
rapidfuzz = "^3.5.0"

# Data Warehouse & Quality (Phase 2-3)
duckdb = "^0.9.0"
great-expectations = { version = "^0.18.0", optional = true }

# External dependencies from cloned repos (future use)
# Option: Install from local paths when needed
# slidio = { path = "external/slidio", develop = true }
# pyfpa = { path = "external/pyfpa", develop = true }
# py-money = { path = "external/py-money", develop = true }
# humanlayer = { path = "external/humanlayer", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
mypy = "^1.7.1"
ruff = "^0.1.9"
hypothesis = "^6.90.0"  # Property-based testing (Phase 7)

[tool.poetry.group.orchestration]
optional = true

[tool.poetry.group.orchestration.dependencies]
prefect = "^2.14.0"  # Workflow orchestration (Phase 8)

[tool.poetry.group.visualization]
optional = true

[tool.poetry.group.visualization.dependencies]
mplfinance = "^0.12.0"  # Financial charts
matplotlib = "^3.8.0"
seaborn = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=scripts --cov-report=term-missing"
